# hlpr_kinesthetic_teaching

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
action/: PlaybackKeyframeDemo.action  RecordKeyframeDemo.action
hlpr_kinesthetic_interaction/: CMakeLists.txt  package.xml  setup.py
hlpr_kinesthetic_interaction/launch/: basic_kinesthetic_interaction.launch  start_kinesthetic_mode.launch
hlpr_kinesthetic_interaction/src/hlpr_kinesthetic_interaction/: EnableKinestheticInteractionState.py  basic_kinesthetic_interaction.py  jaco_7dof_arm.py  jaco_arm.py  kinesthetic_interaction.py
hlpr_kinesthetic_interaction/srv/: KinestheticInteract.srv
hlpr_kinesthetic_teaching/: CMakeLists.txt  package.xml
hlpr_kinesthetic_teaching_api/: CMakeLists.txt  package.xml  setup.py
hlpr_kinesthetic_teaching_api/scripts/: convert_eef_to_joint.py  convert_joint_to_eef.py  kinesthetic_teaching_cli.py  planning_scene_helper.py  playback_bagfile.py  playback_bagfile.py~  playback_bagfile_joints.py  playback_example_function.py  preview_traj.py  send_traj_from_bag.py  setup_tabletop_moe.py  test_kt_api.py  test_traj_preview.py
hlpr_kinesthetic_teaching_api/src/hlpr_kinesthetic_teaching_api/: kinesthetic_teaching_api.py
hlpr_kinesthetic_teaching_api/yaml/: 2d_sim_arm_topics.yaml  poli2_topics.yaml
hlpr_record_demonstration/: CMakeLists.txt  package.xml  setup.py
hlpr_record_demonstration/action/: PlaybackKeyframeDemo.action  RecordKeyframeDemo.action
hlpr_record_demonstration/data/: topics.yaml
hlpr_record_demonstration/launch/: start_playback_services.launch  start_record_services.launch
hlpr_record_demonstration/src/hlpr_record_demonstration/: MoveitPlaybackBagState.py  demonstration.py  eef_publisher.py  kf_tracker.py  kinesthetic_teaching_api.py  playback_demo_action_server_refactor.py  playback_demonstration_action_client.py  playback_demonstration_action_server.py  playback_example.py  playback_plan_object.py  record_demonstration_action_client.py  record_demonstration_action_server.py  record_example.py  test_kt_api.py
hlpr_record_demonstration/srv/: ChangeKF.srv
hlpr_record_demonstration/states/: MoveitPlaybackBagState.py
record_demonstration_with_eye_tracker/scripts/: publish_tracker_data.py
rqt_kinesthetic_teaching/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_kinesthetic_teaching/resource/: KinestheticTeaching.ui  MyPlugin.ui
rqt_kinesthetic_teaching/scripts/: rqt_kinesthetic_teaching
rqt_kinesthetic_teaching/src/rqt_kinesthetic_teaching/: keyframe_bag_interface.py  keyframe_bag_parser.py  kinesthetic_interaction_interface.py  kinesthetic_teaching_widget.py  rqt_kinesthetic_interaction.py  rqt_kinesthetic_teaching.py
src/: basic_kinesthetic_interaction.py  eef_publisher.py  eef_publisher.py~  kinesthetic_interaction.py  playback_keyframe_demo_AS.py  playback_keyframe_demo_action_client.py  record_keyframe_demo_action_client.py  record_keyframe_demo_action_server.py
src/hlpr_kinesthetic_teaching/: basic_kinesthetic_interaction.py  demo_data_0  kinesthetic_interaction.py  playback_keyframe_demo_action_client.py  record_keyframe_demo_action_client.py  record_keyframe_demo_action_server.py
