<?xml version="1.0"?>
<package>
  <name>hlpr_kinesthetic_teaching</name>
  <version>1.0.0</version>
  <description>The hlpr_kinesthetic_teaching Metapackage that stores all things related to kinesthetic teaching and playback</description>

  <maintainer email="athomaz@diligentdroids.com">Andrea L. Thomaz</maintainer>
  <maintainer email="vchu@diligentdroids.com">Vivian Chu</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/HLP-R/hlpr_kinesthetic_teaching/wiki</url>
  <url type="bugtracker">https://github.com/HLP-R/hlpr_kinesthetic_teaching/issues</url>
  <url type="repository">https://github.com/HLP-R/hlpr_kinesthetic_teaching</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hlpr_kinesthetic_interaction</run_depend> 
  <run_depend>hlpr_record_demonstration</run_depend> 

  <export>
    <metapackage />
  </export>
</package>
