<?xml version="1.0"?>
<package>
  <name>hlpr_record_demonstration</name>
  <version>1.0.0</version>
  <description>The hlpr_record_demonstration package that allows keyframes or trajectories to be recorded and saved to bag files. Also includes examples of how to playback the trajectory</description>

  <author email="athomaz@diligentdroids.com">Andrea L. Thomaz</author>
  <maintainer email="athomaz@diligentdroids.com">Andrea L. Thomaz</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/HLP-R/hlpr_kinesthetic_teaching/wiki</url>
  <url type="bugtracker">https://github.com/HLP-R/hlpr_kinesthetic_teaching/issues</url>
  <url type="repository">https://github.com/HLP-R/hlpr_kinesthetic_teaching</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>actionlib_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>moveit_msgs</build_depend>  

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>geometry_msgs</run_depend> 

  <export>
  </export>
</package>
